Agregar ref de xgboost

--- a/notas/referencias/book.bib
+++ b/notas/referencias/book.bib
@@ -99,5 +99,12 @@ year = "2001"
   volume = {Analytical methods for social research},
   year = 2007
 }
-
+@inproceedings{xgboost,
+author = {Chen, Tianqi and Guestrin, Carlos},
+year = {2016},
+month = {08},
+pages = {785-794},
+title = {XGBoost: A Scalable Tree Boosting System},
+doi = {10.1145/2939672.2939785}
+}
 
